disable fullPage on mobile horizontal, fix #full-page-2 img size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -381,7 +381,7 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: relative;
+    position: absolute;
     padding: 5%;
 }
 
@@ -409,15 +409,18 @@ footer {
     transform: translateX(-50%);
     position: relative;
     /*padding-top: 5%;*/
-    height: 100vh;
 }
 
 @media (max-width: 992px) {
+    #full-page-1-text {
+        width: 100vw;
+    }
     #full-page-2-text {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        position: relative;
+        position: absolute;
+        width: 100vw;
     }
 }
 
@@ -475,7 +478,7 @@ footer {
 }
 
 #full-page-3-front-mobile {
-    height: 50vw;
+    height: 50vh;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -487,6 +490,27 @@ footer {
     position: absolute;
     z-index: 0;
     height: 50vh;
+}
+
+@media (max-height: 480px) {
+    #full-page-1-text {
+        position: relative;
+    }
+    #full-page-3-front-mobile {
+        position: relative;
+        top: 0;
+        transform: translateX(-50%);
+    }
+    #full-page-3-text {
+        position: relative;
+        top: 0;
+        transform: translateX(-50%);
+    }
+    #full-page-2-text {
+        position: relative;
+        top: 0;
+        transform: translateX(-50%);
+    }
 }
 
 @media (min-width: 1200px) {
@@ -505,7 +529,7 @@ footer {
         left: 50%;
         padding: 0;
         transform: translate(-50%, -50%);
-        position: relative;
+        position: absolute;
     }
 
     #full-page-2-text {
@@ -526,7 +550,7 @@ footer {
     #full-page-2 img {
         z-index: 0;
         position: absolute;
-        max-height: 90vh;
+        max-height: 70vh;
         /*max-width: 90vh;*/
         top: 50%;
         left: 40%;
@@ -539,7 +563,7 @@ footer {
         top: 50%;
         left: 75%;
         transform: translate(-50%, -50%);
-        position: relative;
+        position: absolute;
         text-align: right;
         z-index: 5;
     }
@@ -584,6 +608,7 @@ footer {
     display: inline;
     position: relative;
     overflow: hidden;
+    font-weight: bold;
 }
 
 .section-action-button:hover {
